--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,13 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowTranslucentStatus">true</item>
+
+        <item name="android:windowContentTransitions">true</item>
+
+        <item name="android:windowSharedElementEnterTransition">@transition/shared_enter</item>
+        <item name="android:windowSharedElementExitTransition">@transition/shared_enter</item>
+        <item name="android:windowSharedElementReenterTransition">@transition/shared_exit</item>
+        <item name="android:windowSharedElementReturnTransition">@transition/shared_exit</item>
     </style>
 
     <style name="Text20">
