--- a/app/src/main/res/layout/adapter_classe.xml
+++ b/app/src/main/res/layout/adapter_classe.xml
@@ -18,7 +18,7 @@
 
         <TextView
             android:id="@+id/classi"
-            style="@style/TextAppearance.MaterialComponents.Overline"
+            style="?textAppearanceOverline"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/classe"
@@ -26,7 +26,7 @@
 
         <TextView
             android:id="@+id/title"
-            style="@style/TextAppearance.MaterialComponents.Headline5"
+            style="?textAppearanceHeadline5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -35,7 +35,7 @@
 
         <TextView
             android:id="@+id/content"
-            style="@style/TextAppearance.MaterialComponents.Body2"
+            style="?textAppearanceBody2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
