--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#18b967</color>
+    <color name="colorPrimary_12perc">#1e18b967</color>
     <color name="colorPrimaryDark">#009750</color>
     <color name="colorAccent">#b9186b</color>
     <color name="almost_white">#f5f5f5</color>
     <color name="divider">#1e000000</color>
 
+    <color name="white">#fff</color>
 </resources>
