--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light">
@@ -6,7 +6,13 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentStatus">false</item>
+        <item name="android:windowBackground">@color/white</item>
+
+
+        <item name="textAppearanceHeadline4">@style/Headline4</item>
+        <item name="android:statusBarColor">?android:windowBackground</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
 
     </style>
 
@@ -15,38 +21,20 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentStatus">false</item>
 
+        <item name="android:windowBackground">@color/white</item>
         <item name="android:windowContentTransitions">true</item>
 
         <item name="android:windowSharedElementEnterTransition">@transition/shared_enter</item>
         <item name="android:windowSharedElementExitTransition">@transition/shared_enter</item>
         <item name="android:windowSharedElementReenterTransition">@transition/shared_exit</item>
         <item name="android:windowSharedElementReturnTransition">@transition/shared_exit</item>
-    </style>
 
-    <style name="Text20">
-        <item name="android:textSize">20sp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">wrap_content</item>
-    </style>
+        <item name="textAppearanceHeadline4">@style/Headline4</item>
 
-    <style name="Text16">
-        <item name="android:textSize">16sp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">wrap_content</item>
-    </style>
-
-    <style name="Text14">
-        <item name="android:textSize">14sp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">wrap_content</item>
-    </style>
-
-    <style name="Text12">
-        <item name="android:textSize">12sp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:statusBarColor">?android:windowBackground</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
     </style>
 
     <style name="CardViewTitle" parent="TextAppearance.MaterialComponents.Body2">
@@ -58,4 +46,11 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">#99000000</item>
     </style>
+
+    <style name="Headline4" parent="TextAppearance.MaterialComponents.Headline4">
+        <item name="fontFamily">sans-serif-light</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textColor">?android:textColorPrimary</item>
+    </style>
+
 </resources>
