--- a/app/src/main/res/layout/fragment_notizie.xml
+++ b/app/src/main/res/layout/fragment_notizie.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/scrollView"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.bortolan.iquadriv2.ui.notizie.NotizieFragment">
 
@@ -16,6 +17,7 @@
             android:id="@+id/news_recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:nestedScrollingEnabled="false"
             android:clipToPadding="false"
             android:orientation="horizontal"
             android:padding="8dp" />
