--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="divider">#1e000000</color>
 
     <color name="white">#fff</color>
+    <color name="almost_black">#263238</color>
 </resources>
